# rust-course-blockchain-exercise

./: Cargo.toml  README.md
binaries/: config.toml
cumulus/parachain-template/pallets/voting/: Cargo.toml
cumulus/parachain-template/pallets/voting/src/: lib.rs  mock.rs  tests.rs
cumulus/parachain-template/runtime/: Cargo.toml
cumulus/parachain-template/runtime/src/: lib.rs
